# remote-desktop-h-so

./: .gitignore  CMakeLists.txt  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build.bat  run_client.bat  run_server.bat  setup.ps1  test_localhost.bat
src/: main_client.cpp  main_server.cpp
src/client/: client.cpp  client.h  input_handler.cpp  input_handler.h  renderer.cpp  renderer.h
src/common/: compression.cpp  compression.h  network.cpp  network.h  protocol.h
src/server/: input_injector.cpp  input_injector.h  screen_capture.cpp  screen_capture.h  server.cpp  server.h
